compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__completion__local_public_record.snap
---
source: compiler-core/src/language_server/tests/completion.rs
expression: "completion_at_default_position(TestProject::for_source(code))"
---
[
    CompletionItem {
        label: "Box",
        label_details: Some(
            CompletionItemLabelDetails {
                detail: None,
                description: Some(
                    "app",
                ),
            },
        ),
        kind: Some(
            Constructor,
        ),
        detail: Some(
            "fn(Int, Int, Float) -> Box",
        ),
        documentation: Some(
            MarkupContent(
                MarkupContent {
                    kind: Markdown,
                    value: " Hello\n",
                },
            ),
        ),
        deprecated: None,
        preselect: None,
        sort_text: None,
        filter_text: None,
        insert_text: Some(
            "Box",
        ),
        insert_text_format: None,
        insert_text_mode: None,
        text_edit: None,
        additional_text_edits: None,
        command: None,
        commit_characters: None,
        data: None,
        tags: None,
    },
]
