compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__completion__local_variable_ignore_anonymous_function_returned.snap
---
source: compiler-core/src/language_server/tests/completion.rs
expression: "\npub fn main() {\n  fn(wibble: Int) {\n    let wabble = 1\n    let add_two = fn(wobble: Int) { wobble + 2 }\n    wibble + add_two(1)\n  }\n}\n"
---
pub fn main() {
  fn(wibble: Int) {
    let wabble = 1
    let add_two = fn(wobble: Int) { wobble + 2 }
    wibble| + add_two(1)
  }
}


----- Completion content -----
Error
  kind:   Constructor
  detail: gleam
  sort:   4_Error
False
  kind:   EnumMember
  detail: gleam
  sort:   4_False
Nil
  kind:   EnumMember
  detail: gleam
  sort:   4_Nil
Ok
  kind:   Constructor
  detail: gleam
  sort:   4_Ok
True
  kind:   EnumMember
  detail: gleam
  sort:   4_True
add_two
  kind:   Variable
  detail: fn(Int) -> Int
  sort:   2_add_two
  desc:   app
  docs:   "A locally defined variable."
  edits:
    [5:4-5:4]: "add_two"
main
  kind:   Function
  detail: fn() -> fn(Int) -> Int
  sort:   2_main
  desc:   app
  edits:
    [5:4-5:4]: "main"
wabble
  kind:   Variable
  detail: Int
  sort:   2_wabble
  desc:   app
  docs:   "A locally defined variable."
  edits:
    [5:4-5:4]: "wabble"
wibble
  kind:   Variable
  detail: Int
  sort:   2_wibble
  desc:   app
  docs:   "A locally defined variable."
  edits:
    [5:4-5:4]: "wibble"
