compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__completion__local_variable_inside_nested_exprs.snap
---
source: compiler-core/src/language_server/tests/completion.rs
expression: "\ntype Foo { Bar(List(#(Bool))) }\nfn wibble() {\n  Bar([#(!{\n    let foo = True\n    foo\n  })])\n  todo\n}\n"
---
type Foo { Bar(List(#(Bool))) }
fn wibble() {
  Bar([#(!{
    let foo = True
    foo|
  })])
  todo
}


----- Completion content -----
Bar
  kind:   Constructor
  detail: fn(List(#(Bool))) -> Foo
  sort:   2_Bar
  desc:   app
  edits:
    [5:4-5:4]: "Bar"
Error
  kind:   Constructor
  detail: gleam
  sort:   4_Error
False
  kind:   EnumMember
  detail: gleam
  sort:   04_False
Nil
  kind:   EnumMember
  detail: gleam
  sort:   4_Nil
Ok
  kind:   Constructor
  detail: gleam
  sort:   4_Ok
True
  kind:   EnumMember
  detail: gleam
  sort:   04_True
foo
  kind:   Variable
  detail: Bool
  sort:   02_foo
  desc:   app
  docs:   "A locally defined variable."
  edits:
    [5:4-5:4]: "foo"
wibble
  kind:   Function
  detail: fn() -> a
  sort:   2_wibble
  desc:   app
  edits:
    [5:4-5:4]: "wibble"
