compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__completion__no_variable_completions_after_anonymous_function_scope.snap
---
source: compiler-core/src/language_server/tests/completion.rs
expression: "\npub fn main() {\n  fn() {\n    let something = 10\n  }\n  s\n}\n"
---
pub fn main() {
  fn() {
    let something = 10
  }
  s|
}


----- Completion content -----
Error
  kind:   Constructor
  detail: gleam
  sort:   4_Error
False
  kind:   EnumMember
  detail: gleam
  sort:   4_False
Nil
  kind:   EnumMember
  detail: gleam
  sort:   4_Nil
Ok
  kind:   Constructor
  detail: gleam
  sort:   4_Ok
True
  kind:   EnumMember
  detail: gleam
  sort:   4_True
main
  kind:   Function
  detail: fn() -> a
  sort:   2_main
  desc:   app
  edits:
    [5:2-5:2]: "main"
